--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.js",
-    "lint:fix": "eslint src/**/*.js --fix"
+    "lint:fix": "eslint src/**/*.js --fix",
+    "docker:build": "docker-compose build",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:dev": "docker-compose -f docker-compose.dev.yml up"
   },
   "keywords": [
     "transcript",
@@ -23,12 +28,15 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "fluent-ffmpeg": "^2.1.3",
+    "helmet": "^7.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
