added test supabase connection APi endpoint
added test supabase connection APi endpoint

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ TRANSCRIPT_LANGUAGE_HINTS=en,de,es,fr,it,pt,nl,pl  # Language hints for better d
 ENABLE_HEALTH_CHECKS=true
 LOG_LEVEL=info
 ENABLE_METRICS=true
+
+# Database Configuration (Optional)
+SUPABASE_URL=your-supabase-url
+SUPABASE_KEY=your-supabase-key
