--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@supabase/supabase-js": "^2.52.0",
     "axios": "^1.7.9",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
