--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ GEMINI_AUDIO_SAMPLE_RATE=16000
 AUDIO_FETCH_INTERVAL=5000  # Fetch audio every 5 seconds
 AUDIO_BUFFER_SIZE=30  # Keep last 30 seconds for context
 AUDIO_FORMAT=WAV
+TRANSCRIPTION_START_DELAY=30  # Wait 30 seconds before starting transcription
 
 # Transcript Configuration
 TRANSCRIPT_LANGUAGE=auto  # Auto-detect language (supports multiple languages)
